add_subdirectory(./04-mixtures)
add_subdirectory(./xx-usps)
add_subdirectory(./01-linearModels)
add_subdirectory(./03-outlier)
add_subdirectory(./07-RL)
add_subdirectory(./08-RL)
add_subdirectory(./06-hmmBinary)
#add_subdirectory(./xx-setFit)
add_subdirectory(./digits)
add_subdirectory(./05-kernelPCA)
add_subdirectory(./02-carData)
